# c-base64

./: CMakeLists.txt  c-base64.sln  c-base64.vcxproj  c-base64.vcxproj.filters
src/: b64.c  b64.h
